@@ -609,6 +609,9 @@ function apachesolr_search_process_response($response, DrupalSolrQueryInterface 
   $total = $response->response->numFound;
   pager_default_initialize($total, $query->getParam('rows'));
   if ($total > 0) {
+    $fl = $query->getParam('fl');
+    // 'id' and 'entity_type' are the only required fields in the schema, and
+    // 'score' is generated by solr.
     foreach ($response->response->docs as $doc) {
       $extra = array();
 
@@ -630,7 +633,11 @@ function apachesolr_search_process_response($response, DrupalSolrQueryInterface 
           $snippets[] = truncate_utf8($doc->teaser, 256, TRUE);
         }
       }
-      $snippet = theme('apachesolr_search_snippets__' . $doc->entity_type . '__' . $doc->bundle, array('doc' => $doc, 'snippets' => $snippets));
+      $hook = 'apachesolr_search_snippets__' . $doc->entity_type;
+      if (!empty($doc->bundle)) {
+        $hook .= '__' . $doc->bundle;
+      }
+      $snippet = theme($hook, array('doc' => $doc, 'snippets' => $snippets));
 
       if (!isset($doc->content)) {
         $doc->content = $snippet;
@@ -641,17 +648,36 @@ function apachesolr_search_process_response($response, DrupalSolrQueryInterface 
       if (isset($doc->ds_created)) {
         $doc->created = strtotime($doc->ds_created);
       }
+      else {
+        $doc->created = NULL;
+      }
+
       if (isset($doc->ds_changed)) {
         $doc->changed = strtotime($doc->ds_changed);
       }
+      else {
+        $doc->changed = NULL;
+      }
+
       if (isset($doc->tos_name)) {
         $doc->name = $doc->tos_name;
+      }
+      else {
+        $doc->name = NULL;
       }
 
       $extra = array();
 
       // Allow modules to alter each document and its extra information.
       drupal_alter('apachesolr_search_result', $doc, $extra);
+
+      // Set all expected fields from fl to NULL if they are missing so
+      // as to prevent Notice: Undefined property.
+      foreach ($fl as $field) {
+        if (!isset($doc->{$field})) {
+          $doc->{$field} = NULL;
+        }
+      }
 
       $fields = (array) $doc;
 
